# cy8_workspace

./: .env.example  .gitignore  GUIDE_VENV.md  MODIFICATIONS_SUMMARY.md  MODIFICATION_COMPLETE.md  README.md  STOCKAGE_RESULTATS_ANALYSE.md  activate.bat  activate.sh  check_venv.py  ci_setup.bat  ci_setup.sh  debug_extra_paths.py  debug_extraction.py  demo_images.py  exemple_preferences.py  install_hooks.py  install_rust_optimization.bat  install_rust_optimization.sh  main.py  requirements.txt  run_all_tests.py  start.bat  start.sh  test_comfyui_quick.py  test_comfyui_tab.py  test_direct_workflow.py  test_execution_progress.py  test_global_log_analysis.py  test_images_simple.py  test_integration_global.py  test_time_issue.py  test_timeouts.py  test_workflow_detection.py  validate_ci.py  validate_ci_quick.py
.github/: copilot-instructions.md
docs/: Exemples_Questions_Mistral.txt  Fix_SaveText_Issue.md  Fix_Scrollbar_Log_Tab.md  GALERIE_IMAGES_IMPLEMENTATION.md  GALERIE_OPTIMISEE_IMPLEMENTATION.md  GALERIE_SELECTION_IMPLEMENTATION.md  GUIDE_UTILISATION_GALERIE_OPTIMISEE.md  GUIDE_VENV.md  IMAGES_COLLECTE_Guide.md  IMPLEMENTATION_ENVIRONMENT_TRACKING.md  Images_Tab_Documentation.md  LOG_ANALYSIS_IMPROVEMENTS.md  Modification_Question_Mistral.md  Onglet_ComfyUI_Guide.md  REORGANISATION.md  Reorganisation_Tests_Resume.md  STORAGE_FIX_DOCUMENTATION.md  Tests_Organisation.md  guide_extra_paths.py  guide_nouvelle_interface.py  guide_tableau_largeurs.py
rust_image_processor/: Cargo.toml  README.md
rust_image_processor/src/: lib.rs
src/: cy6_Queue.py  cy6_file.py  (+17 more)
(+74 files in other folders)
