[package]
name = "rust_image_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_image_processor"
crate-type = ["cdylib"]

[dependencies]
image = "0.24"
pyo3 = { version = "0.20", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
